// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> Snapshots Without props should match snapshot with a default list 1`] = `
.c1 {
  padding: 20px 24px 20px 24px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 0;
  margin: 0;
  list-style: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > * {
  border-bottom: 1px solid #DBDBE8;
}

.c0 > *:last-child {
  border: none;
}

<div>
  <ul
    class="c0"
  >
    <li
      class="c1"
    >
      <div>
        List test
      </div>
    </li>
  </ul>
</div>
`;

exports[`<List /> Snapshots Without props should match snapshot with a default list and multiple items 1`] = `
.c1 {
  padding: 20px 24px 20px 24px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 0;
  margin: 0;
  list-style: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > * {
  border-bottom: 1px solid #DBDBE8;
}

.c0 > *:last-child {
  border: none;
}

<div>
  <ul
    class="c0"
  >
    <li
      class="c1"
    >
      <div>
        List test
      </div>
    </li>
    <li
      class="c1"
    >
      <div>
        List test
      </div>
    </li>
  </ul>
</div>
`;

exports[`<List /> Snapshots Without props should match snapshot with a default list and using a link item 1`] = `
.c1 {
  padding: 20px 24px 20px 24px;
  display: inline-block;
  width: 100%;
  height: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 0;
  margin: 0;
  list-style: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > * {
  border-bottom: 1px solid #DBDBE8;
}

.c0 > *:last-child {
  border: none;
}

<div>
  <ul
    class="c0"
  >
    <li>
      <a
        class="c1"
      >
        <div>
          List test
        </div>
      </a>
    </li>
  </ul>
</div>
`;

exports[`<List /> Snapshots Without props should match snapshot with a default list, multiple items and no dividers 1`] = `
.c1 {
  padding: 20px 24px 20px 24px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 0;
  margin: 0;
  list-style: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > *:last-child {
  border: none;
}

<div>
  <ul
    class="c0"
  >
    <li
      class="c1"
    >
      <div>
        List test
      </div>
    </li>
    <li
      class="c1"
    >
      <div>
        List test
      </div>
    </li>
  </ul>
</div>
`;

exports[`<List /> Snapshots Without props should match snapshot with a horizontal list 1`] = `
.c1 {
  padding: 20px 24px 20px 24px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 0;
  margin: 0;
  list-style: none;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 > * {
  border-right: 1px solid #DBDBE8;
}

.c0 > *:last-child {
  border: none;
}

<div>
  <ul
    class="c0"
  >
    <li
      class="c1"
    >
      <button
        type="button"
      >
        List test
      </button>
    </li>
  </ul>
</div>
`;

exports[`<List /> Snapshots Without props should match snapshot with a horizontal list and multiple items 1`] = `
.c1 {
  padding: 20px 24px 20px 24px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 0;
  margin: 0;
  list-style: none;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 > * {
  border-right: 1px solid #DBDBE8;
}

.c0 > *:last-child {
  border: none;
}

<div>
  <ul
    class="c0"
  >
    <li
      class="c1"
    >
      <div>
        List test
      </div>
    </li>
    <li
      class="c1"
    >
      <div>
        List test
      </div>
    </li>
  </ul>
</div>
`;

exports[`<List /> Snapshots Without props should match snapshot with a horizontal list, multiple items and no dividers 1`] = `
.c1 {
  padding: 20px 24px 20px 24px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 0;
  margin: 0;
  list-style: none;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 > *:last-child {
  border: none;
}

<div>
  <ul
    class="c0"
  >
    <li
      class="c1"
    >
      <div>
        List test
      </div>
    </li>
    <li
      class="c1"
    >
      <div>
        List test
      </div>
    </li>
  </ul>
</div>
`;
